syntax = "proto3";
package ecity;

option csharp_namespace = "MokomoGames.Protobuf";

message SoulLevelTableRecord
{
    uint32 no = 1;
    uint32 level = 2;
    uint32 hp = 3;
    uint32 recovery_power = 4;
    uint32 power = 5;
    uint32 need_next_level_exp = 6;
}

message SoulLevelTable
{
    repeated SoulLevelTableRecord records = 1;
}