syntax = "proto3";
package ecity;

option csharp_namespace = "MokomoGames.Protobuf";

message UserSoulData
{
    string guid = 1;
    uint32 soul_no = 2;
    uint32 total_level_exp = 3;
    uint32 total_skill_exp = 4;
    bool favorite = 5;
}

message UserSoulDataList
{
    repeated UserSoulData souls = 1;
}

// 通信API
message UpdateUserSoulDataRequest
{
    UserSoulData soul = 1;
}

message UpdateUserSoulDataResponse
{
    repeated UserSoulData souls = 1;
}

message GetUserSoulDataListRequest
{
    
}

message GetUserSoulDataListResponse
{
    repeated UserSoulData souls = 1;
}

message UpdateUserSoulDataFavoriteRequest
{
    string guid = 1;
    bool favorite = 2;
}

message UpdateUserSoulDataFavoriteResponse
{
    bool favorite = 1;
}

